Fix wrong folder name

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -212,4 +212,4 @@ endif()
 add_subdirectory( mathlib )
 add_subdirectory( raytrace )
 add_subdirectory( tier1 )
-add_subdirectory( vgui_controls )
+add_subdirectory( vgui2 )
