Fix incorrect paths for vgui_controls

--- a/src/vgui2/CMakeLists.txt
+++ b/src/vgui2/CMakeLists.txt
@@ -3,83 +3,83 @@ project( vgui_controls )
 
 # Sources and headers files in this project
 set( VGUI_CONTROLS_SOURCES
-	src/vgui_key_translation.cpp
-	src/vgui_key_translation.h
-	vgui_controls/AnalogBar.cpp
-	vgui_controle/AnimationImagePanel.cpp
-	vgui_controls/AnimationController.cpp
-	vgui_controls/BitmapImagePanel.cpp
-	vgui_controls/BuildFactoryHelper.cpp
-	vgui_controls/BuildGroup.cpp
-	vgui_controls/BuildModeDialog.cpp
-	vgui_controls/Button.cpp
-	vgui_controls/CheckButton.cpp
-	vgui_controls/CheckButtonList.cpp
-	vgui_controls/CircularProgressBar.cpp
-	vgui_controls/ComboBox.cpp
-	vgui_controls/consoledialog.cpp
-	vgui_controls/ControllerMap.cpp
-	vgui_controls/controls.cpp
-	vgui_controls/CvarToggleCheckButton.cpp
-	vgui_controls/DirectorySelectDialog.cpp
-	vgui_controls/Divider.cpp
-	vgui_controls/EditablePanel.cpp
-	vgui_controls/ExpandButton.cpp
-	vgui_controls/FileOpenDialog.cpp
-	vgui_controls/FileOpenStateMachine.cpp
-	vgui_controls/FocusNavGroup.cpp
-	vgui_controls/Frame.cpp
-	vgui_controls/GraphPanel.cpp
-	vgui_controls/HTML.cpp
-	vgui_controls/Image.cpp
-	vgui_controls/ImageList.cpp
-	vgui_controls/ImagePanel.cpp
-	vgui_controls/InputDialog.cpp
-	vgui_controls/KeyBindingHelpDialog.cpp
-	vgui_controls/KeyBoardEditorDialog.cpp
-	vgui_controls/KeyRepeat.cpp
-	vgui_controls/Label.cpp
-	vgui_controls/ListPanel.cpp
-	vgui_controls/ListViewPanel.cpp
-	vgui_controls/Menu.cpp
-	vgui_controls/MenuBar.cpp
-	vgui_controls/MenuButton.cpp
-	vgui_controls/MenuItem.cpp
-	vgui_controls/MessageBox.cpp
-	vgui_controls/MessageDialog.cpp
-	vgui_controls/Panel.cpp
-	vgui_controls/PanelListPanel.cpp
-	vgui_controls/PerforceFileExplorer.cpp
-	vgui_controls/PerforceFileList.cpp
-	vgui_controls/perforcefilelistframe.cpp
-	vgui_controls/ProgressBar.cpp
-	vgui_controls/ProgressBox.cpp
-	vgui_controls/PropertyDialog.cpp
-	vgui_controls/PropertyPage.cpp
-	vgui_controls/PropertySheet.cpp
-	vgui_controls/QueryBox.cpp
-	vgui_controls/RadioButton.cpp
-	vgui_controls/RichText.cpp
-	vgui_controls/RotatingProgressBar.cpp
-	vgui_controls/savedocumentquery.cpp
-	vgui_controls/ScalableImagePanel.cpp
-	vgui_controls/ScrollableEditablePanel.cpp
-	vgui_controls/ScrollBar.cpp
-	vgui_controls/ScrollBarSlider.cpp
-	vgui_controls/SectionedListPanel.cpp
-	vgui_controls/Slider.cpp
-	vgui_controls/Splitter.cpp
-	vgui_controls/subrectimage.cpp
-	vgui_controls/TextEntry.cpp
-	vgui_controls/TextImage.cpp
-	vgui_controls/ToggleButton.cpp
-	vgui_controls/Tooltip.cpp
-	vgui_controls/ToolWindow.cpp
-	vgui_controls/TreeView.cpp
-	vgui_controls/TreeViewListControl.cpp
-	vgui_controls/URLLabel.cpp
-	vgui_controls/WizardPanel.cpp
-	vgui_controls/WizardSubPanel.cpp
+	"${CMAKE_SOURCE_DIR}/vgui2/src/vgui_key_translation.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/src/vgui_key_translation.h"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/AnalogBar.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/AnimationImagePanel.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/AnimationController.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/BitmapImagePanel.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/BuildFactoryHelper.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/BuildGroup.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/BuildModeDialog.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/Button.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/CheckButton.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/CheckButtonList.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/CircularProgressBar.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/ComboBox.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/consoledialog.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/ControllerMap.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/controls.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/CvarToggleCheckButton.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/DirectorySelectDialog.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/Divider.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/EditablePanel.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/ExpandButton.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/FileOpenDialog.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/FileOpenStateMachine.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/FocusNavGroup.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/Frame.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/GraphPanel.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/HTML.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/Image.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/ImageList.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/ImagePanel.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/InputDialog.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/KeyBindingHelpDialog.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/KeyBoardEditorDialog.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/KeyRepeat.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/Label.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/ListPanel.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/ListViewPanel.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/Menu.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/MenuBar.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/MenuButton.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/MenuItem.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/MessageBox.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/MessageDialog.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/Panel.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/PanelListPanel.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/PerforceFileExplorer.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/PerforceFileList.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/perforcefilelistframe.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/ProgressBar.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/ProgressBox.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/PropertyDialog.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/PropertyPage.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/PropertySheet.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/QueryBox.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/RadioButton.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/RichText.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/RotatingProgressBar.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/savedocumentquery.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/ScalableImagePanel.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/ScrollableEditablePanel.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/ScrollBar.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/ScrollBarSlider.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/SectionedListPanel.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/Slider.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/Splitter.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/subrectimage.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/TextEntry.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/TextImage.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/ToggleButton.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/Tooltip.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/ToolWindow.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/TreeView.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/TreeViewListControl.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/URLLabel.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/WizardPanel.cpp"
+	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/WizardSubPanel.cpp"
 	"${CMAKE_SOURCE_DIR}/public/filesystem_helpers.cpp"
 	"${CMAKE_SOURCE_DIR}/public/Color.h"
 	"${CMAKE_SOURCE_DIR}/public/filesystem.h"
