Try an alternative way to build vgui_controls

--- a/src/vgui2/CMakeLists.txt
+++ b/src/vgui2/CMakeLists.txt
@@ -1,194 +1,1 @@
-# Name of the project
-project( vgui_controls )
-
-# Sources and headers files in this project
-set( VGUI_CONTROLS_SOURCES
-	"${CMAKE_SOURCE_DIR}/vgui2/src/vgui_key_translation.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/src/vgui_key_translation.h"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/AnalogBar.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/AnimationImagePanel.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/AnimationController.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/BitmapImagePanel.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/BuildFactoryHelper.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/BuildGroup.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/BuildModeDialog.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/Button.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/CheckButton.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/CheckButtonList.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/CircularProgressBar.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/ComboBox.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/consoledialog.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/ControllerMap.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/controls.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/CvarToggleCheckButton.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/DirectorySelectDialog.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/Divider.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/EditablePanel.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/ExpandButton.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/FileOpenDialog.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/FileOpenStateMachine.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/FocusNavGroup.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/Frame.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/GraphPanel.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/HTML.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/Image.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/ImageList.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/ImagePanel.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/InputDialog.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/KeyBindingHelpDialog.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/KeyBoardEditorDialog.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/KeyRepeat.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/Label.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/ListPanel.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/ListViewPanel.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/Menu.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/MenuBar.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/MenuButton.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/MenuItem.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/MessageBox.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/MessageDialog.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/Panel.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/PanelListPanel.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/PerforceFileExplorer.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/PerforceFileList.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/perforcefilelistframe.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/ProgressBar.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/ProgressBox.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/PropertyDialog.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/PropertyPage.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/PropertySheet.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/QueryBox.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/RadioButton.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/RichText.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/RotatingProgressBar.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/savedocumentquery.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/ScalableImagePanel.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/ScrollableEditablePanel.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/ScrollBar.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/ScrollBarSlider.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/SectionedListPanel.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/Slider.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/Splitter.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/subrectimage.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/TextEntry.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/TextImage.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/ToggleButton.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/Tooltip.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/ToolWindow.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/TreeView.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/TreeViewListControl.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/URLLabel.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/WizardPanel.cpp"
-	"${CMAKE_SOURCE_DIR}/vgui2/vgui_controls/WizardSubPanel.cpp"
-	"${CMAKE_SOURCE_DIR}/public/filesystem_helpers.cpp"
-	"${CMAKE_SOURCE_DIR}/public/Color.h"
-	"${CMAKE_SOURCE_DIR}/public/filesystem.h"
-	"${CMAKE_SOURCE_DIR}/public/filesystem_helpers.h"
-	"${CMAKE_SOURCE_DIR}/public/tier0/memdbgoff.h"
-	"${CMAKE_SOURCE_DIR}/public/tier0/memdbgon.h"
-	"${CMAKE_SOURCE_DIR}/public/tier1/interface.h"
-	"${CMAKE_SOURCE_DIR}/public/tier1/KeyValues.h"
-	"${CMAKE_SOURCE_DIR}/public/tier1/mempool.h"
-	"${CMAKE_SOURCE_DIR}/public/tier1/utlmemory.h"
-	"${CMAKE_SOURCE_DIR}/public/tier1/utlrbtree.h"
-	"${CMAKE_SOURCE_DIR}/public/tier1/utlvector.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/AnalogBar.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/AnimatingImagePanel.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/AnimationController.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/BitmapImagePanel.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/BuildGroup.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/BuildModeDialog.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/Button.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/CheckButton.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/CheckButtonList.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/CircularProgressBar.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/ComboBox.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/consoledialog.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/ControllerMap.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/Controls.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/CvarToggleCheckButton.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/DialogManager.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/DirectorySelectDialog.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/Divider.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/EditablePanel.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/ExpandButton.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/FileOpenDialog.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/FileOpenStateMachine.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/FocusNavGroup.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/Frame.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/GraphPanel.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/HTML.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/Image.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/ImageList.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/ImagePanel.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/InputDialog.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/KeyBindingHelpDialog.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/KeyBindingMap.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/KeyBoardEditorDialog.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/KeyRepeat.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/Label.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/ListPanel.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/ListViewPanel.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/Menu.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/MenuBar.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/MenuButton.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/MenuItem.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/MessageBox.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/MessageDialog.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/MessageMap.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/Panel.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/PanelAnimationVar.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/PanelListPanel.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/PerforceFileExplorer.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/PerforceFileList.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/perforcefilelistframe.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/PHandle.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/ProgressBar.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/ProgressBox.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/PropertyDialog.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/PropertyPage.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/PropertySheet.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/QueryBox.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/RadioButton.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/RichText.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/RotatingProgressBar.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/savedocumentquery.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/ScalableImagePanel.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/ScrollableEditablePanel.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/ScrollBar.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/ScrollBarSlider.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/SectionedListPanel.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/Slider.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/Splitter.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/subrectimage.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/TextEntry.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/TextImage.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/ToggleButton.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/Tooltip.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/ToolWindow.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/TreeView.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/TreeViewListControl.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/URLLabel.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/WizardPanel.h"
-	"${CMAKE_SOURCE_DIR}/public/vgui_controls/WizardSubPanel.h"
-	)
-
-# Add a static library
-add_library( vgui_controls STATIC ${VGUI_CONTROLS_SOURCES} )
-
-# Pre-processor definitions
-target_compile_definitions( vgui_controls PRIVATE ${SHARED_LIB_COMPILE_DEFS} )
-
-# Linker definitions
-set_target_properties( vgui_controls PROPERTIES
-	COMPILE_FLAGS "${SHARED_LIB_LINKER_DEFS}"
-	)
-
-# Include directories
-target_include_directories( vgui_controls PRIVATE
-	${SHARED_INCLUDE_DIRS}
-	"${CMAKE_SOURCE_DIR}/thirdparty"
-	)
-
-# No prefixes
-set_target_properties( vgui_controls PROPERTIES PREFIX "" )
+add_subdirectory( vgui_controls )
